# action_vision

./: CMakeLists.txt  package.xml
ACTION_TEMPLATES/action/: msg_template.action
ACTION_TEMPLATES/include/: template_ASRV.h
ACTION_TEMPLATES/src/: template_ACL.cpp  template_ASRV.cpp
Monochrom_am_Ofen/: Documentation  Monochrom_am_Ofen.bat  Monochrom_am_Ofen.sh
Monochrom_am_Ofen/Config/: Camera_Features.yaml  Test_Params.yaml
Monochrom_am_Ofen/Pictures/: Untitled Document  Untitled Document 1
Monochrom_am_Ofen/Source/: find_ROI.cpp  find_ROI.h  main.cpp
action/: action_test.action
launch/: action_vision.launch
msgs_and_action/: CMakeLists.txt  package.xml
observer/: CMakeLists.txt  package.xml
observer/include/: observer_ASRV.h
observer/launch/: observer.launch
observer/src/: observer_ASRV.cpp
src/: actionserver.cpp  container_detector_ASRV.cpp
src/templates/: (old)actionclient_template.cpp  template_ACL.cpp
vision_statemachine/: CMakeLists.txt  package.xml
vision_statemachine/src/: mini_ASRV_tester.cpp
